--- a/Cover Flow.html
+++ b/Cover Flow.html
@@ -15,8 +15,8 @@
 		<input type="radio" name="testimonial" id="t-5">
 		<div class="testimonials">
 			<label class="item" for="t-1">
-				<img src="Cover%20Flow_files/Köpülő Asszony.jpg" alt="picture">
-				<p>Köpülő Asszony</p>
+				<img src="Cover%20Flow_files/Köpülő asszony.jpg" alt="picture">
+				<p>Köpülő asszony</p>
 				<h2>- Munkácsy Mihály</h2>
 			</label>
 			<label class="item" for="t-2">
@@ -25,7 +25,7 @@
 				<h2>- Munkácsy Mihály</h2>
 			</label>
 			<label class="item" for="t-3">
-				<img src="Cover%20Flow_files/Ásító Inas.jpg" alt="picture">
+				<img src="Cover%20Flow_files/Ásító inas.jpg" alt="picture">
 				<p>Ásító inas</p>
 				<h2>- Munkácsy Mihály</h2>
 			</label>
@@ -35,9 +35,9 @@
 				<h2>- Munkácsy Mihály</h2>
 			</label>
 			<label class="item" for="t-5">
-				<img src="Cover%20Flow_files/Mona Lisa.jpg" alt="picture">
-				<p>Mona Lisa</p>
-				<h2>- Leonardo da Vinci</h2>
+				<img src="Cover%20Flow_files/Golgota.jpg" alt="picture">
+				<p>Golgota</p>
+				<h2>- Munkácsy Mihály</h2>
 			</label>
 		</div>
 		<div class="dots">
