Fixing path problems in pictureflow

--- a/pictureflow/index.html
+++ b/pictureflow/index.html
@@ -33,7 +33,7 @@
 			<a-nft
 				registerslider
 				type='nft';
-				url='/resources/markers/kop';
+				url='resources/markers/kop';
 				id="kopulo";
 			>
 
@@ -71,7 +71,7 @@
 					<h2>Munkácsy Mihály</h2>
 				</label>
 				<label class="item" for="t-5">
-					<img src="images/golgota.JPG" alt="picture">
+					<img src="images/golgota.jpg" alt="picture">
 					<p>Golgota</p>
 					<h2>Munkácsy Mihály</h2>
 				</label>
