--- a/pictureflow/index.html
+++ b/pictureflow/index.html
@@ -12,6 +12,113 @@
 	  <link rel="stylesheet" href="styles/style.css">
 
 	  <script src="https://unpkg.com/aframe-html-shader@0.2.0/dist/aframe-html-shader.min.js"></script>	
+
+	  <script>
+		/* Get the documentElement (<html>) to display the page in fullscreen */
+		var elem = document.documentElement;
+		var toggle = -1;
+
+		/* View in fullscreen */
+		function openFullscreen() {
+		  if (elem.requestFullscreen) {
+			elem.requestFullscreen();
+		  } else if (elem.webkitRequestFullscreen) { /* Safari */
+			elem.webkitRequestFullscreen();
+		  } else if (elem.msRequestFullscreen) { /* IE11 */
+			elem.msRequestFullscreen();
+		  }
+		}
+		
+		/* Close fullscreen */
+		function closeFullscreen() {
+		  if (document.exitFullscreen) {
+			document.exitFullscreen();
+		  } else if (document.webkitExitFullscreen) { /* Safari */
+			document.webkitExitFullscreen();
+		  } else if (document.msExitFullscreen) { /* IE11 */
+			document.msExitFullscreen();
+		  }
+		}
+
+		/*Handle toggle*/
+		function toggleCheck(){
+			toggle*=-1;
+			var x = document.getElementById("myswitch");
+			if(toggle==1) {openFullscreen();x.style.display="none";}
+			else closeFullscreen();
+		}
+
+		</script>
+
+	<style>
+		.switch {
+  position: relative;
+  display: inline-block;
+  width: 90px;
+  height: 34px;
+}
+
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2196F3;
+  -webkit-transition: .4s;
+  transition: .4s;
+   border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(55px);
+}
+
+/*------ ADDED CSS ---------*/
+.slider:after
+{
+ content:'FULL';
+ color: white;
+ display: block;
+ position: absolute;
+ transform: translate(-50%,-50%);
+ top: 50%;
+ left: 50%;
+ font-size: 10px;
+ font-family: Verdana, sans-serif;
+}
+
+input:checked + .slider:after
+{  
+  content:'FULL';
+}
+	</style>
 	
 	</head>
 	<body>
@@ -37,18 +144,28 @@
 				id="kopulo";
 			>
 
+			<!--a-obj-model
+			src='models/csonk.obj'
+			mtl='models/csonk.mtl'
+			position="0 0 10"
+			scale="5 5 5"
+			rotation='-90 0 0'
+			>
+			</a-obj-model-->
+
 			</a-nft>
 	  
 		</a-scene>
-
-		  <div style="width: 100%; height: 100%; position: fixed; left: 0; top: 0; z-index: 5;">
+		
+		  <div style="width: 100%; height: 100%; position: fixed; left: 0; top: 25%; z-index: 5; zoom: 0.7;">
 			<!--div id="htmlElement" style="background: #F8F8F8; color: #333; font-size: 48px">Hello, HTML!</div-->
 		  <div id="slider">
-			<input type="radio" name="testimonial" id="t-1" checked="checked">
-			<input type="radio" name="testimonial" id="t-2">
-			<input type="radio" name="testimonial" id="t-3">
-			<input type="radio" name="testimonial" id="t-4">
-			<input type="radio" name="testimonial" id="t-5">
+			
+			<input type="radio" name="testimonial" id="t-1" checked="checked" hidden>
+			<input type="radio" name="testimonial" id="t-2" hidden>
+			<input type="radio" name="testimonial" id="t-3" hidden>
+			<input type="radio" name="testimonial" id="t-4" hidden>
+			<input type="radio" name="testimonial" id="t-5" hidden>
 			<div class="testimonials">
 				<label class="item" for="t-1">
 					<img src="images/kop.jpg" alt="picture">
@@ -66,12 +183,12 @@
 					<h2>Munkácsy Mihály</h2>
 				</label>
 				<label class="item" for="t-4">
-					<img src="images/hon.jpg" alt="picture">
+					<img src="images/halasz.jpg" alt="picture">
 					<p>Honfoglalás</p>
 					<h2>Munkácsy Mihály</h2>
 				</label>
 				<label class="item" for="t-5">
-					<img src="images/golgota.jpg" alt="picture">
+					<img src="images/tea.jpg" alt="picture">
 					<p>Golgota</p>
 					<h2>Munkácsy Mihály</h2>
 				</label>
@@ -83,6 +200,16 @@
 				<label for="t-4"></label>
 				<label for="t-5"></label>
 			</div>
+		</div>
+
+		<div style="display: flex; justify-content: flex-end; min-width: 100vh;">
+		<!--button type="button" onclick="openFullscreen()">Fullscreen</button-->
+		<!--label>Fullscreen</label-->
+		<label class="switch" id="myswitch">
+			<input type="checkbox" onchange="toggleCheck()">
+			<span class="slider round"></span>
+		  </label>
+		  
 		</div>
 	</div>
 
