--- a/pictureflow/index.html
+++ b/pictureflow/index.html
@@ -140,7 +140,7 @@ input:checked + .slider:after
 			<a-nft
 				registerslider
 				type='nft';
-				url='resources/markers/kop';
+				url='pictureflow/resources/markers/kop';
 				id="kopulo";
 			>
 
