--- a/pictureflow/index.html
+++ b/pictureflow/index.html
@@ -4,125 +4,20 @@
     <title>AR web</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="description" content="markers">
-	 <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-	 <!--script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.8/aframe/build/aframe-ar.js"></script-->
-	 <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
+	<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+	<!--script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.8/aframe/build/aframe-ar.js"></script-->
+	<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
 
-	  <script src="scripts/multiMarkersName.js"></script>
-	  <link rel="stylesheet" href="styles/style.css">
+	<script src="scripts/multiMarkersName.js"></script>
+	<link rel="stylesheet" href="styles/style.css">
 
-	  <script src="https://unpkg.com/aframe-html-shader@0.2.0/dist/aframe-html-shader.min.js"></script>	
+	<script src="https://unpkg.com/aframe-html-shader@0.2.0/dist/aframe-html-shader.min.js"></script>	
 
-	  <script>
-		/* Get the documentElement (<html>) to display the page in fullscreen */
-		var elem = document.documentElement;
-		var toggle = -1;
-
-		/* View in fullscreen */
-		function openFullscreen() {
-		  if (elem.requestFullscreen) {
-			elem.requestFullscreen();
-		  } else if (elem.webkitRequestFullscreen) { /* Safari */
-			elem.webkitRequestFullscreen();
-		  } else if (elem.msRequestFullscreen) { /* IE11 */
-			elem.msRequestFullscreen();
-		  }
-		}
-		
-		/* Close fullscreen */
-		function closeFullscreen() {
-		  if (document.exitFullscreen) {
-			document.exitFullscreen();
-		  } else if (document.webkitExitFullscreen) { /* Safari */
-			document.webkitExitFullscreen();
-		  } else if (document.msExitFullscreen) { /* IE11 */
-			document.msExitFullscreen();
-		  }
-		}
-
-		/*Handle toggle*/
-		function toggleCheck(){
-			toggle*=-1;
-			var x = document.getElementById("myswitch");
-			if(toggle==1) {openFullscreen();x.style.display="none";}
-			else closeFullscreen();
-		}
-
-		</script>
-
-	<style>
-		.switch {
-  position: relative;
-  display: inline-block;
-  width: 90px;
-  height: 34px;
-}
-
-.switch input {display:none;}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #2196F3;
-  -webkit-transition: .4s;
-  transition: .4s;
-   border-radius: 34px;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-  border-radius: 50%;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(55px);
-}
-
-/*------ ADDED CSS ---------*/
-.slider:after
-{
- content:'FULL';
- color: white;
- display: block;
- position: absolute;
- transform: translate(-50%,-50%);
- top: 50%;
- left: 50%;
- font-size: 10px;
- font-family: Verdana, sans-serif;
-}
-
-input:checked + .slider:after
-{  
-  content:'FULL';
-}
-	</style>
+	<script src="scripts/switch.js"></script>
+	<link rel="stylesheet" href="styles/switch.css">
 	
 	</head>
-	<body>
-		
+	<body>		
 		<a-scene markers_start vr-mode-ui="enabled: false" color-space="sRGB" renderer="gammaOutput: true"
 		embedded arjs='debugUIEnabled: false; sourceType: webcam; patternRatio: 0.85; trackingMethod: best;'>
 			 
@@ -184,12 +79,12 @@ input:checked + .slider:after
 				</label>
 				<label class="item" for="t-4">
 					<img src="images/halasz.jpg" alt="picture">
-					<p>Honfoglalás</p>
-					<h2>Munkácsy Mihály</h2>
+					<p>Öreg halász</p>
+					<h2>Csontváry Kosztka Tivadar</h2>
 				</label>
 				<label class="item" for="t-5">
 					<img src="images/tea.jpg" alt="picture">
-					<p>Golgota</p>
+					<p>Teát öntő nő</p>
 					<h2>Munkácsy Mihály</h2>
 				</label>
 			</div>
