New AR Solution (MindAR)

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Bay VR Dev</title>
     
 	</head>
 	<body>
         <div>
             <div style="display: inline-block;"> Poszter alkalmazás: </div>
-            <a href="./posterAR/" style="display: inline-block;">posterAR</a><br>
+            <a href="./posterAR/" style="display: inline-block;">posterAR</a>
+
+            <div style="display: inline-block;">(Hozzá a </div>
+            <a href="./resources/markers/framed/" style="display: inline-block;">markerek</a>
+            <div style="display: inline-block;">)</div>
         </div>        
 
         <br>
@@ -16,6 +21,17 @@
             <div style="display: inline-block;">AR-galléria: </div>
             <a href="./pictureflow/" style="display: inline-block;">pictureflow</a>
         </div>        
+
+        <br>
+
+        <div>
+            <div style="display: inline-block;">Új poszteralkalmazás: </div>
+            <a href="./mindar/" style="display: inline-block;">mindAR</a>
+
+            <div style="display: inline-block;">(Hozzá a </div>
+            <a href="./resources/markers/" style="display: inline-block;">markerek</a>
+            <div style="display: inline-block;">)</div>
+        </div>
 
 	</body>
 </html>
