--- a/pictureflow/index.html
+++ b/pictureflow/index.html
@@ -40,8 +40,8 @@
 			>
 
 			<!--a-obj-model
-			src='models/csonk.obj'
-			mtl='models/csonk.mtl'
+			src='/resources/models/csonk.obj'
+			mtl='/resources/models/csonk.mtl'
 			position="0 0 10"
 			scale="5 5 5"
 			rotation='-90 0 0'
