--- a/posterAR/index.html
+++ b/posterAR/index.html
@@ -16,7 +16,7 @@
     	</a-entity>
 
 		<a-assets>
-			<video src="videos/Holo.mp4"
+			<video src="/resources/videos/Holo.mp4"
 				preload="auto" id="vid" response-type="arraybuffer" loop
 				crossorigin webkit-playsinline autoplay muted playsinline>
 			</video>
@@ -25,7 +25,7 @@
 		<a-marker
 			videohandler registerevents
 			type="pattern";
-			url="resources/markers/pattern-vr.patt";
+			url="/resources/converted_markers/pattern-vr.patt";
 			id="videomarker_001";
 			
 		>
