--- a/index.html
+++ b/index.html
@@ -33,5 +33,14 @@
             <div style="display: inline-block;">)</div>
         </div>
 
+        <br>
+
+        <div>
+            <div style="display: inline-block;">Tesztlink: </div>
+            <a href="https://bayzoltankutatas-my.sharepoint.com/:i:/g/personal/peter_margitai_bayzoltan_hu/EZh3QINZPt1AhIFsJGrww4cB0JppE-ldii7ZN_EpHyfsgQ?e=JDdYhV" style="display: inline-block;">onedrive teszt</a>
+            <a href="https://bayzoltankutatas-my.sharepoint.com/:f:/g/personal/zsombor_zsiros_bayzoltan_hu/Ehm0BHfQsg9MiMhKFQgmftMB6nsGOGN2JCG93xCcI7prlg?e=Ta60Fh" style="display: inline-block;">onedrive teszt</a>
+            
+        </div>
+
 	</body>
 </html>
