--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <!--meta http-equiv="content-type" content="text/html; charset=UTF-8"-->
+    <meta http-equiv = "refresh" content = "0 ; url = https://bayzoltankutatas-my.sharepoint.com/:f:/g/personal/zsombor_zsiros_bayzoltan_hu/Ehm0BHfQsg9MiMhKFQgmftMB6nsGOGN2JCG93xCcI7prlg?e=Ta60Fh"/>
     <title>Bay VR Dev</title>
     
 	</head>
