--- a/index.html
+++ b/index.html
@@ -1,47 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--meta http-equiv="content-type" content="text/html; charset=UTF-8"-->
-    <meta http-equiv = "refresh" content = "0 ; url = https://bayzoltankutatas-my.sharepoint.com/:f:/g/personal/zsombor_zsiros_bayzoltan_hu/Ehm0BHfQsg9MiMhKFQgmftMB6nsGOGN2JCG93xCcI7prlg?e=Ta60Fh"/>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <!--meta http-equiv = "refresh" content = "0 ; url = https://bayzoltankutatas-my.sharepoint.com/:f:/g/personal/zsombor_zsiros_bayzoltan_hu/Ehm0BHfQsg9MiMhKFQgmftMB6nsGOGN2JCG93xCcI7prlg?e=Ta60Fh"/-->
     <title>Bay VR Dev</title>
     
 	</head>
 	<body>
         <div>
-            <div style="display: inline-block;"> Poszter alkalmazás: </div>
-            <a href="./posterAR/" style="display: inline-block;">posterAR</a>
+            <div style="display: inline-block;"> Huncastle rendezvény: </div>
+            <a href="https://bayzoltankutatas-my.sharepoint.com/:u:/g/personal/zsombor_zsiros_bayzoltan_hu/EV_Ksc2ERHVCs4OMgGJNTm8BUBqcWGL-Na8OSqRSbJ2S8g" style="display: inline-block;">applikáció</a>
 
-            <div style="display: inline-block;">(Hozzá a </div>
+            <!--div style="display: inline-block;">(Hozzá a </div>
             <a href="./resources/markers/framed/" style="display: inline-block;">markerek</a>
-            <div style="display: inline-block;">)</div>
+            <div style="display: inline-block;">)</div-->
         </div>        
 
         <br>
 
-        <div>
+        <!--div>
             <div style="display: inline-block;">AR-galléria: </div>
             <a href="./pictureflow/" style="display: inline-block;">pictureflow</a>
-        </div>        
+        </div-->        
 
         <br>
 
-        <div>
+        <!--div>
             <div style="display: inline-block;">Új poszteralkalmazás: </div>
             <a href="./mindar/" style="display: inline-block;">mindAR</a>
 
             <div style="display: inline-block;">(Hozzá a </div>
             <a href="./resources/markers/" style="display: inline-block;">markerek</a>
             <div style="display: inline-block;">)</div>
-        </div>
+        </div-->
 
         <br>
-
-        <div>
-            <div style="display: inline-block;">Tesztlink: </div>
-            <a href="https://bayzoltankutatas-my.sharepoint.com/:i:/g/personal/peter_margitai_bayzoltan_hu/EZh3QINZPt1AhIFsJGrww4cB0JppE-ldii7ZN_EpHyfsgQ?e=JDdYhV" style="display: inline-block;">onedrive teszt</a>
-            <a href="https://bayzoltankutatas-my.sharepoint.com/:f:/g/personal/zsombor_zsiros_bayzoltan_hu/Ehm0BHfQsg9MiMhKFQgmftMB6nsGOGN2JCG93xCcI7prlg?e=Ta60Fh" style="display: inline-block;">onedrive teszt</a>
-            
-        </div>
-
 	</body>
 </html>
