--- a/castleAR/index.html
+++ b/castleAR/index.html
@@ -65,11 +65,13 @@
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0" videohandler>
-        <a-video src="#museumVideo" width ="0.45" height ="1">
+        <!--a-video src="#museumVideo" width ="0.45" height ="1"-->
+        <a-video src="#museumVideo" width ="0.5625" height ="1.25"></a-video>
       </a-entity>     
 
       <a-entity mindar-image-target="targetIndex: 1" videohandler>
-        <a-video src="#utonVideo" width ="0.466" height ="1">
+        <!--a-video src="#utonVideo" width ="0.466" height ="1"-->
+        <a-video src="#utonVideo" width ="0.5825" height ="1.25"></a-video>
       </a-entity>
 
       <a-entity mindar-image-target="targetIndex: 2">
@@ -83,7 +85,8 @@
       </a-entity>
 
       <a-entity mindar-image-target="targetIndex: 4" videohandler>
-        <a-video src="#virtualGallery" width ="1" height ="0.565291">
+        <!--a-video src="#virtualGallery" width ="1" height ="0.565291"-->
+        <a-video src="#virtualGallery" width ="1.25" height ="0.70661375">
       </a-entity>
 
       <!--a-entity mindar-image-target="targetIndex: 4"-->
