--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 	<body>
         <div>
-            <div style="display: inline-block;"> Huncastle rendezvény: </div>
-            <a href="https://bayzoltankutatas-my.sharepoint.com/:u:/g/personal/zsombor_zsiros_bayzoltan_hu/EV_Ksc2ERHVCs4OMgGJNTm8BUBqcWGL-Na8OSqRSbJ2S8g" style="display: inline-block;">applikáció</a>
+            <div style="display: inline-block;"> HunCastle rendezvény: </div>
+            <a href="https://bayzoltankutatas-my.sharepoint.com/:f:/g/personal/zsombor_zsiros_bayzoltan_hu/Ehm0BHfQsg9MiMhKFQgmftMB6nsGOGN2JCG93xCcI7prlg?e=Ta60Fh" style="display: inline-block;">applikáció</a>
 
             <!--div style="display: inline-block;">(Hozzá a </div>
             <a href="./resources/markers/framed/" style="display: inline-block;">markerek</a>
