--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 	</head>
 	<body>
         <div>
-            <div style="display: inline-block;"> HunCastle rendezvény: </div>
+            <!--div style="display: inline-block;"> HunCastle rendezvény: </div>
             <a href="https://bayzoltankutatas-my.sharepoint.com/:f:/g/personal/zsombor_zsiros_bayzoltan_hu/Ehm0BHfQsg9MiMhKFQgmftMB6nsGOGN2JCG93xCcI7prlg?e=Ta60Fh" style="display: inline-block;">applikáció</a>
-
+            <p>
             (<a href="./castleAR" style="display: inline-block;">webalkalmazás</a>)
-
+            </p-->
+            <a href="./sampleAR" style="display: inline-block;">AR Webalkalmazás</a>
 
             <!--div style="display: inline-block;">(Hozzá a </div>
             <a href="./resources/markers/framed/" style="display: inline-block;">markerek</a>
