--- a/sampleAR/index.html
+++ b/sampleAR/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.0.0/dist/mindar-image.prod.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!--renderer="colorManagement: true, physicallyCorrectLights: true,"-->
-    <a-scene  mindar-image="imageTargetSrc: ./targets0.mind"
+    <a-scene  mindar-image="imageTargetSrc: ./targets.mind"
               color-space="sRGB"
               vr-mode-ui="enabled: false"
               renderer = "colorManagement: true"
